# LearnRayTracingInOneWeekend

./: .gitignore  CMakeLists.txt  README.md
bb/: MAIN
include/: camera.hpp  color.hpp  dielectric.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  images.hpp  lambertian.hpp  material.hpp  metal.hpp  ray.hpp  rtweekend.hpp  shape.hpp  sphere.hpp  vec3.hpp
include/toyrender/: All.h
include/toyrender/common/: camera.h  color.h  onb.h  ray.h  vec3.h
include/toyrender/material/: dielectric.h  diffuse_light.h  isotropic.h  lambertian.h  material.h  metal.h  scatter_record.h
include/toyrender/object/: aabb.h  box.h  box_compare.h  bvh_node.h  constant_medium.h  flip_face.h  hit_record.h  hittable.h  hittable_list.h  moving_sphere.h  rotate_y.h  sphere.h  translate.h  xy_rect.h  xz_rect.h  yz_rect.h  zx_rect.h
include/toyrender/pdf/: cosine_pdf.h  hittable_pdf.h  mixture_pdf.h  pdf.h
include/toyrender/scene_models/: scene_config.h  scene_model.h
include/toyrender/texture/: checker_texture.h  image_texture.h  perlin.h  perlin_noise_texture.h  solid_color.h  texture.h
include/toyrender/util/: h_help.h  rtweekend.hpp
include/toyrender/utils/: h_help.h  rtw_stb_image.h  rtweekend.h
src/: main.cpp
src/ignore/: noise.cpp  run.sh  smallpt.cpp
src/render/: camera.cpp  color.cpp  dielectric.cpp  hit_record.cpp  hittable_list.cpp  images.cpp  lambertian.cpp  metal.cpp  ray.cpp  sphere.cpp  vec3.cpp
src/render/common/: camera.cpp  color.cpp  onb.cpp  ray.cpp  vec3.cpp
src/render/material/: dielectric.cpp  diffuse_light.cpp  isotropic.cpp  lambertian.cpp  metal.cpp
src/render/object/: aabb.cpp  box.cpp  box_compare.cpp  bvh_node.cpp  constant_medium.cpp  flip_face.cpp  hit_record.cpp  hittable_list.cpp  moving_sphere.cpp  rotate_y.cpp  sphere.cpp  translate.cpp  xy_rect.cpp  xz_rect.cpp  yz_rect.cpp  zx_rect.cpp
src/render/pdf/: cosine_pdf.cpp  hittable_pdf.cpp  (+1 more)
test/: estimatePi.cpp  estimate_x_x.cpp
utils/: gen_All.h.py
(+6 files in other folders)
